@@ -483,7 +483,7 @@ void fl_restore_clip() {
   }
 # endif
 #elif defined(__APPLE_QUARTZ__)
-  if ( fl_window )
+  if ( fl_window ) // clipping for a true window
   {
     GrafPtr port = GetWindowPort( fl_window );
     if ( port ) { 
@@ -497,6 +497,16 @@ void fl_restore_clip() {
       Fl_X::q_fill_context();
       DisposeRgn( portClip );
     }
+  } else if (fl_gc) { // clipping for an offscreen drawing world (CGBitmap)
+    Rect portRect;
+    portRect.top = 0;
+    portRect.left = 0;
+    portRect.bottom = CGBitmapContextGetHeight(fl_gc);
+    portRect.right = CGBitmapContextGetWidth(fl_gc);
+    Fl_X::q_clear_clipping();
+    if (r)
+      ClipCGContextToRegion(fl_gc, &portRect, r);
+    Fl_X::q_fill_context();
   }
 #else
   if (r) XSetRegion(fl_display, fl_gc, r);
